added text to body and references

--- a/abbrevs.bib
+++ b/abbrevs.bib
@@ -86,7 +86,7 @@
 @string{invis = "{P}roceedings of the {A}ustralasian {S}ymposium on {I}nformation {V}isualisation {(INVIS)}"}
 @string{apvis = "{P}roceedings of the {A}sia-{P}acific {S}ymposium on {I}nformation {V}isualisation {(APVIS)}"}
 @string{uist = "{P}roceedings of the {ACM} {S}ymposium on {U}ser {I}nterface {S}oftware and {T}echnology {(UIST)}"}
-@string{sigcse = "{P}roceedings of the {ACM} {S}ymposium on {C}omputer {S}cience {E}ducation {(SIGCSE)}"}
+@string{sigcse = "{P}roc. of {S}ymposium on {C}omputer {S}cience {E}ducation {(SIGCSE)}"}
 @string{vrml = "{P}roceedings of the {S}ymposium on {V}irtual {R}eality {M}odeling {L}anguage {(VRML)}"}
 @string{msr = "{P}roceedings of the {I}nternational {W}orking {C}onference on {M}ining {S}oftware {R}epositories {(MSR)}"}
 @string{gi = "{P}roceedings of {G}raphics {I}nterface"}
