--- a/discussion.tex
+++ b/discussion.tex
@@ -1,11 +1,13 @@
 \section{Discussion}
 
+There are a number of aspects that we would like to draw upon based on our experience at running big data hackathons over a two year period.
+
 \textbf{Participants.} recruitment, group dynamics, community engagement
 
 \textbf{Data.} structuring and cleaning, open data, storing
 
-\textbf{Tools.} analysis, visualization
+\textbf{Tools.} Participants used a variety of tools to solve the problems as part of the datathons. Some used statistics focused tools such as R, SPSS, and Matlab. While others used some visualization tools such as Tableau and Excel. While more participants who were developers used toolkits like D3 to develop visualizations.
 
 \textbf{Logistics.} room setup, break out rooms, food
 
-\textbf{Things to avoid.}
+\textbf{Things to avoid.} Going all night, Grouping all technical people into one team
