--- a/sigcse2016.tex
+++ b/sigcse2016.tex
@@ -166,21 +166,20 @@ Mike Boyes\\
 \maketitle
 
 \begin{abstract}
-Hosting successful hackathons is difficult. With the accessibility of open data there is now an opportunity to host hackathons focused on big data, however these are new and not clearly defined about how to do this process. In this paper we present our experience at hosting three big data hackathons called \emph{datathons} that involved students and members from industry coming together to solve challenging problems with publicly open data and data from not for profits. The resources developed for our datathons about our experience will help inform others who also wish to host big data hackathons.
+Hosting successful hackathons is difficult. With the accessibility of open data there is now an opportunity to host hackathons focused on big data, however these are new and not clearly defined about how to do this process. In this paper we present our experience at hosting four big data hackathons called \emph{datathons} that involved students and members from the community coming together to solve challenging problems with publicly open data and data from not for profits. The resources developed for our datathons about our experience will help inform others who also wish to host big data hackathons.
 \end{abstract}
 
 \category{K.3.2}{Computer and Information Science Education}{Computer science education}
 
-\terms{Design}
+%\terms{Design}
 
-\keywords{Big Data, Hackathon, Open Data}
+\keywords{Big Data, Data Science, Hackathon, Open Data}
 
 
 %----------------------------------------------------
-% INTRODUCTION
+% Sections
 %----------------------------------------------------
-\section{Introduction}
-
+\input{Introduction}
 \input{relatedwork}
 \input{datathons}
 \input{discussion}
@@ -189,7 +188,7 @@ Hosting successful hackathons is difficult. With the accessibility of open data 
 
 \section*{Acknowledgments}
 \small
-Thanks to the Government of Canada, City of Calgary for providing open data sets. Thanks to the Data For Good Calgary Meetup group for assisting with the datathon event.
+Thanks to the Government of Canada, City of Calgary for providing open data sets. Thanks to the Data For Good Calgary Meetup group for assisting with the datathon event, in particular Geoff Zakaib and Kathryn Winkler. Some of this research was funded by Mitacs.
 
 
 \small
