--- a/discussion.tex
+++ b/discussion.tex
@@ -10,4 +10,8 @@ There are a number of aspects that we would like to draw upon based on our exper
 
 \textbf{Logistics.} room setup, break out rooms, food
 
-\textbf{Things to avoid.} Going all night, Grouping all technical people into one team
+\textbf{Media.} ????
+
+\textbf{Things to avoid.} Going all night, Grouping all technical people into one team.  Data on one server - have at least two, plus dropbox, plus USB sticks.
+
+Have specific goals.
