--- a/introduction.tex
+++ b/introduction.tex
@@ -2,6 +2,10 @@
 
 Big data is a term for data sets so large or complex that traditional data processing applications are inadequate. Challenges include analysis, capture, data curation, search, sharing, storage, transfer, visualization, and information privacy. While open data is the idea that certain data should be freely available to everyone to use and republish as they wish, without restrictions from copyright, patents or other mechanisms of control. 
 
+% I'm not sure the data used in the datathons should be considered big data.  Both of last year's events had datasets that could easily be handled within Access DBs.  
+
 We need better tools and techniques for exploring big data and open data. We also need people to develop the necessary skills in order to gain better insight about large data sets that exist within organizations and available through open data repositories. Universities and schools are slowly adopting their practices by introducing courses on data science but these courses are still in their infancy. To address this challenge many community based organizations are running events (e.g. workshops and tutorials) to help people acquire the necessary data science skills.
 
 In this paper we present our experience at hosting four big data hackathons called \emph{datathons} that aimed at helping students and members from the community to come together to solve challenging problems with publicly open data and data from not for profits. The resources developed for our datathons about our experience will help inform others who also wish to host big data hackathons.
+
+
