--- a/sigcse2016.tex
+++ b/sigcse2016.tex
@@ -144,17 +144,11 @@ http://dx.doi.org/10.1145/2676723.2677284}
 %       \email{frank.maurer@ucalgary.ca}   
 %}
 \alignauthor
-Craig Anslow, John Brosz, Frank Maurer\\
-       \affaddr{Department of Computer Science}\\
-       \affaddr{University of Calgary}\\
+Craig Anslow$^1$, John Brosz$^2$, Frank Maurer$^1$, Mike Boyes$^3$\\
+       \affaddr{$^1$Department of Computer Science, $^2$Libraries \& Cultural Resources, $^3$Department of Pyschology}\\
+       \affaddr{University of Calgary, }\\
        \affaddr{Calgary, Alberta, Canada}\\
-       \email{\{canslow,jdlbrosz,fmaurer\}@ucalgary.ca}   
-\alignauthor
-Mike Boyes\\
-       \affaddr{Department of Psychology}\\
-       \affaddr{University of Calgary}\\
-       \affaddr{Calgary, Alberta, Canada}\\
-       \email{boyes@ucalgary.ca}   
+       \email{\{canslow,jdlbrosz,fmaurer,boyes\}@ucalgary.ca}   
 }
 
 
